ft:driver and operator being able to update themselves
validation before update

fx:can update only a character which needs an update

tests for register validations

correct tests

ft:update readme
