# swagger.json
@@ -25,7 +25,66 @@
         }
       }
     },
-
+    "/api/v1/auth/profiles/{id}":{
+      "get": {
+        "tags": [
+            "User"
+        ],
+        "summary": "Get the profile of the user",
+        "description": "Get user's profile",
+        "operationId": "getProfile",
+        "parameters": [
+            {
+                "in": "path",
+                "name": "id",
+                "type": "number",
+                "required": true
+            }
+        ],
+        "produces": [
+            "application/json"
+        ],
+        "responses": {
+            "200": {
+                "description": "OK"
+            }
+        }
+      }
+    },
+    "/api/v1/auth/updateProfile":{
+      "patch": {
+        "tags": [
+            "User"
+        ],
+        "summary": " Update the profile of the user",
+        "description": "Update user's profile",
+        "operationId": "updateProfile",
+        "parameters": [
+          {
+            "in": "header",
+            "name": "Authorization",
+            "required": true,
+            "type": "string",
+            "description": "token"
+          },
+            {
+                "in": "body",
+                "name": "body",
+                "schema": {
+                    "$ref": "#/components/schemas/User"
+                }
+            }
+        ],
+        "produces": [
+            "application/json"
+        ],
+        "responses": {
+            "200": {
+                "description": "Profile Updated successfully"
+            }
+        }
+    }
+    },
     "/api/v1/auth/login": {
       "post": {
         "tags": ["User"],
